[gd_scene load_steps=4 format=3 uid="uid://bj8wqhknkemi2"]

[ext_resource type="Script" path="res://World/Avatar.gd" id="1_8sosr"]
[ext_resource type="Texture2D" uid="uid://ndgvkwd73qba" path="res://Assets/graphics/sprites/Avatar.png" id="2_sg06e"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(15, 15)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_8sosr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sg06e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
